---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom albums\nselect {\n    title,\n    title_and_spaces = f\"  {title}  \",\n    low = (title | text.lower),\n    up = (title | text.upper),\n    ltrimmed = (title | text.ltrim),\n    rtrimmed = (title | text.rtrim),\n    trimmed = (title | text.trim),\n    len = (title | text.length),\n    subs = (title | text.extract 2 5),\n    replace = (title | text.replace \"al\" \"PIKA\"),\n}\nsort {title}\nfilter (title | text.starts_with \"Black\") || (title | text.contains \"Sabbath\") || (title | text.ends_with \"os\")\n"
input_file: prqlc/prqlc/tests/integration/queries/text_module.prql
---
WITH
table_0 AS (
  SELECT
    title,
    CONCAT('  ', title, '  ') AS title_and_spaces,
    LOWER(title) AS low,
    UPPER(title) AS up,
    LTRIM(title) AS ltrimmed,
    RTRIM(title) AS rtrimmed,
    TRIM(title) AS trimmed,
    CHAR_LENGTH(title) AS len,
    SUBSTRING(title, 2, 5) AS subs,
    REPLACE (title, 'al', 'PIKA') AS "replace"
  FROM
    albums
)
SELECT
  title,
  title_and_spaces,
  low,
  up,
  ltrimmed,
  rtrimmed,
  trimmed,
  len,
  subs,
  "replace"
FROM
  table_0
WHERE
  title LIKE CONCAT('Black', '%')
  OR title LIKE CONCAT('%', 'Sabbath', '%')
  OR title LIKE CONCAT('%', 'os')
ORDER BY
  title
